K8s/Deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myapp-deployment
  namespace: app
  labels:
    app: myapp
spec:
  replicas: 2
  selector:
    matchLabels:
      app: myapp
  template:
    metadata:
      name: myapp
      labels:
        app: myapp
    spec:
      containers:
      - name: nginx
        image: cr.yandex/crpjresmdt6bvu99mm57/my_app:latest
        ports:
          - containerPort: 80
      imagePullSecrets:
        - name: ycregistry
