K8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: myapp-svc
  namespace: app
spec:
  selector:
    app: myapp
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 30001
  type: NodePort
